Fix logo clipping on small screens.

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -49,8 +49,7 @@ a, a:hover {
 		a {
 			display: block;
 			background: url('/images/galaxy_logo_white.svg') no-repeat top;
-			background-size: 250px;
-            height:80px;
+            height:100px;
             text-indent:100%;
             white-space: nowrap;
             overflow: hidden;
